--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -520,12 +520,6 @@ parameters:
 			path: tests/AbstractWebTestCase.php
 
 		-
-			message: '#^Construct empty\(\) is not allowed\. Use more strict comparison\.$#'
-			identifier: empty.notAllowed
-			count: 1
-			path: tests/AbstractWebTestCase.php
-
-		-
 			message: '#^Dynamic call to static method Symfony\\Bundle\\FrameworkBundle\\Test\\WebTestCase\:\:assertResponseRedirects\(\)\.$#'
 			identifier: staticMethod.dynamicCall
 			count: 2
@@ -558,12 +552,6 @@ parameters:
 		-
 			message: '#^PHPDoc tag @var with type Doctrine\\Persistence\\ManagerRegistry is not subtype of type Doctrine\\Bundle\\DoctrineBundle\\Registry\.$#'
 			identifier: varTag.type
-			count: 1
-			path: tests/AbstractWebTestCase.php
-
-		-
-			message: '#^Short ternary operator is not allowed\. Use null coalesce operator if applicable or consider using long ternary\.$#'
-			identifier: ternary.shortNotAllowed
 			count: 1
 			path: tests/AbstractWebTestCase.php
 
@@ -744,7 +732,7 @@ parameters:
 		-
 			message: '#^You should use assertSame\(\) instead of assertEquals\(\), because both values are scalars of the same type$#'
 			identifier: phpunit.assertEquals
-			count: 5
+			count: 3
 			path: tests/Entity/AccountDatabaseTest.php
 
 		-
@@ -788,12 +776,6 @@ parameters:
 			identifier: staticMethod.alreadyNarrowedType
 			count: 1
 			path: tests/Entity/UserDatabaseTest.php
-
-		-
-			message: '#^You should use assertSame\(\) instead of assertEquals\(\), because both values are scalars of the same type$#'
-			identifier: phpunit.assertEquals
-			count: 1
-			path: tests/Extension/NrArrayTranslatorTest.php
 
 		-
 			message: '#^Parameter \#1 \$attributes \(array\<string, mixed\>\) of method Tests\\Fixtures\\TokenStub\:\:setAttributes\(\) should be contravariant with parameter \$attributes \(array\) of method Symfony\\Component\\Security\\Core\\Authentication\\Token\\TokenInterface\:\:setAttributes\(\)$#'
@@ -862,12 +844,6 @@ parameters:
 			path: tests/Performance/ExportActionPerformanceTest.php
 
 		-
-			message: '#^Dynamic call to static method PHPUnit\\Framework\\Assert\:\:assertEquals\(\)\.$#'
-			identifier: staticMethod.dynamicCall
-			count: 1
-			path: tests/Performance/ExportActionPerformanceTest.php
-
-		-
 			message: '#^Dynamic call to static method PHPUnit\\Framework\\Assert\:\:assertInstanceOf\(\)\.$#'
 			identifier: staticMethod.dynamicCall
 			count: 5
@@ -880,6 +856,12 @@ parameters:
 			path: tests/Performance/ExportActionPerformanceTest.php
 
 		-
+			message: '#^Dynamic call to static method PHPUnit\\Framework\\Assert\:\:assertSame\(\)\.$#'
+			identifier: staticMethod.dynamicCall
+			count: 1
+			path: tests/Performance/ExportActionPerformanceTest.php
+
+		-
 			message: '#^Dynamic call to static method PHPUnit\\Framework\\Assert\:\:assertStringContainsString\(\)\.$#'
 			identifier: staticMethod.dynamicCall
 			count: 1
@@ -888,12 +870,6 @@ parameters:
 		-
 			message: '#^Variable \$content on left side of \?\? always exists and is not nullable\.$#'
 			identifier: nullCoalesce.variable
-			count: 1
-			path: tests/Performance/ExportActionPerformanceTest.php
-
-		-
-			message: '#^You should use assertSame\(\) instead of assertEquals\(\), because both values are scalars of the same type$#'
-			identifier: phpunit.assertEquals
 			count: 1
 			path: tests/Performance/ExportActionPerformanceTest.php
 
@@ -934,25 +910,25 @@ parameters:
 			path: tests/Performance/ExportPerformanceTest.php
 
 		-
-			message: '#^@covers value EntryRepository\:\:findByDate references an invalid method\.$#'
+			message: '#^@covers value \\EntryRepository\:\:findByDate references an invalid method\.$#'
 			identifier: phpunit.coversMethod
 			count: 1
 			path: tests/Performance/ExportWorkflowIntegrationTest.php
 
 		-
-			message: '#^@covers value ExportAction\:\:__invoke references an invalid method\.$#'
+			message: '#^@covers value \\ExportAction\:\:__invoke references an invalid method\.$#'
 			identifier: phpunit.coversMethod
 			count: 2
 			path: tests/Performance/ExportWorkflowIntegrationTest.php
 
 		-
-			message: '#^@covers value ExportService\:\:enrichEntriesWithTicketInformation references an invalid method\.$#'
+			message: '#^@covers value \\ExportService\:\:enrichEntriesWithTicketInformation references an invalid method\.$#'
 			identifier: phpunit.coversMethod
 			count: 2
 			path: tests/Performance/ExportWorkflowIntegrationTest.php
 
 		-
-			message: '#^@covers value ExportService\:\:exportEntries references an invalid method\.$#'
+			message: '#^@covers value \\ExportService\:\:exportEntries references an invalid method\.$#'
 			identifier: phpunit.coversMethod
 			count: 1
 			path: tests/Performance/ExportWorkflowIntegrationTest.php
@@ -967,12 +943,6 @@ parameters:
 			message: '#^Dynamic call to static method PHPUnit\\Framework\\Assert\:\:assertCount\(\)\.$#'
 			identifier: staticMethod.dynamicCall
 			count: 1
-			path: tests/Performance/ExportWorkflowIntegrationTest.php
-
-		-
-			message: '#^Dynamic call to static method PHPUnit\\Framework\\Assert\:\:assertEquals\(\)\.$#'
-			identifier: staticMethod.dynamicCall
-			count: 6
 			path: tests/Performance/ExportWorkflowIntegrationTest.php
 
 		-
@@ -994,6 +964,12 @@ parameters:
 			path: tests/Performance/ExportWorkflowIntegrationTest.php
 
 		-
+			message: '#^Dynamic call to static method PHPUnit\\Framework\\Assert\:\:assertSame\(\)\.$#'
+			identifier: staticMethod.dynamicCall
+			count: 6
+			path: tests/Performance/ExportWorkflowIntegrationTest.php
+
+		-
 			message: '#^Dynamic call to static method PHPUnit\\Framework\\Assert\:\:assertStringContainsString\(\)\.$#'
 			identifier: staticMethod.dynamicCall
 			count: 1
@@ -1009,12 +985,6 @@ parameters:
 			message: '#^PHPDoc tag @var with type App\\Repository\\EntryRepository is not subtype of type App\\Repository\\EntryRepository\<App\\Entity\\Entry\>\.$#'
 			identifier: varTag.type
 			count: 1
-			path: tests/Performance/ExportWorkflowIntegrationTest.php
-
-		-
-			message: '#^You should use assertSame\(\) instead of assertEquals\(\), because both values are scalars of the same type$#'
-			identifier: phpunit.assertEquals
-			count: 6
 			path: tests/Performance/ExportWorkflowIntegrationTest.php
 
 		-
